--- a/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\DataAccessLayer\DataAccessLayer.csproj" />
+    <ProjectReference Include="..\..\SharedModels\SharedModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
