--- a/ClientApp.csproj
+++ b/ClientApp.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <None Remove="ClientApp\app\components\addclient\addclient.ts" />
+    <None Remove="ClientApp\app\components\updateclient\updateclient.ts" />
     <None Remove="ClientApp\app\components\viewallclients\viewallclients.ts" />
-    <None Remove="ClientApp\app\components\viewclient\viewclient.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -70,7 +70,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\app\components\addclient\addclient.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\viewallclients\viewallclients.ts" />
-    <TypeScriptCompile Include="ClientApp\app\components\viewclient\viewclient.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\updateclient\updateclient.ts" />
   </ItemGroup>
   
 </Project>
