update client done. delete backend done

--- a/ClientApp.csproj
+++ b/ClientApp.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <None Remove="ClientApp\app\components\addclient\addclient.ts" />
+    <None Remove="ClientApp\app\components\helpers\client.ts" />
+    <None Remove="ClientApp\app\components\helpers\clienthelper.ts" />
     <None Remove="ClientApp\app\components\updateclient\updateclient.ts" />
     <None Remove="ClientApp\app\components\viewallclients\viewallclients.ts" />
   </ItemGroup>
@@ -69,6 +71,8 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\app\components\addclient\addclient.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\helpers\client.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\helpers\clienthelper.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\viewallclients\viewallclients.ts" />
     <TypeScriptCompile Include="ClientApp\app\components\updateclient\updateclient.ts" />
   </ItemGroup>
