--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-hot-middleware": "^2.18.0"
+  },
+  "dependencies": {
+    "aurelia-dialog": "^1.0.0-rc.2.0.0"
   }
 }
